--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -3,4 +3,16 @@ project(fcld_lab2_final)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(fcld_lab2_final main.cpp SymbolTable.cpp SymbolTable.h)
+add_executable(fcld_lab2_final
+        main.cpp
+        HashTable.cpp
+        HashTable.h
+        Scanner.cpp
+        Scanner.h
+        Token.cpp
+        Token.h
+        PIF.cpp
+        PIF.h
+        SymbolTable.cpp
+        SymbolTable.h
+)
