--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -3,6 +3,17 @@ project(fcld_lab2_final)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+find_package(
+        Boost 1.73.0
+)
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+endif()
+
 add_executable(fcld_lab2_final
         main.cpp
         data_structure/implementation/HashTable.cpp
@@ -23,4 +34,13 @@ add_executable(fcld_lab2_final
         finite_automata/header/IdentifierFA.h
         finite_automata/header/IntegerConstantFA.h
         test/TestFA.h
-        grammar/implementation/Grammar.cpp grammar/header/Grammar.h model/header/Production.h model/implementation/Production.cpp exception/GrammarFormatException.h)
+        grammar/implementation/Grammar.cpp
+        grammar/header/Grammar.h
+        model/header/Production.h
+        model/implementation/Production.cpp
+        exception/GrammarFormatException.h
+        parser/header/Parser.h
+        parser/implementation/Parser.cpp
+        model/header/LR0Item.h
+        model/implementation/LR0Item.cpp
+        grammar/header/EnhancedCFGGrammar.h grammar/implementation/EnhancedCFGGrammar.cpp model/header/State.h model/implementation/State.cpp)
