--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -43,4 +43,19 @@ add_executable(fcld_lab2_final
         parser/implementation/Parser.cpp
         model/header/LR0Item.h
         model/implementation/LR0Item.cpp
-        grammar/header/EnhancedCFGGrammar.h grammar/implementation/EnhancedCFGGrammar.cpp model/header/State.h model/implementation/State.cpp test/TestParser.h model/header/Actions.h model/implementation/Actions.cpp data_structure/header/ActionTable.h data_structure/implementation/ActionTable.cpp syntax_tree/header/SyntaxTree.h syntax_tree/implementation/SyntaxTree.cpp model/header/ParsingNode.h model/implementation/ParsingNode.cpp exception/LR0Exception.h exception/ConflictException.h)
+        grammar/header/EnhancedCFGGrammar.h
+        grammar/implementation/EnhancedCFGGrammar.cpp
+        model/header/State.h
+        model/implementation/State.cpp
+        test/TestParser.h
+        model/header/Actions.h
+        model/implementation/Actions.cpp
+        data_structure/header/ActionTable.h
+        data_structure/implementation/ActionTable.cpp
+        syntax_tree/header/SyntaxTree.h
+        syntax_tree/implementation/SyntaxTree.cpp
+        model/header/ParsingNode.h
+        model/implementation/ParsingNode.cpp
+        exception/LR0Exception.h
+        exception/ConflictException.h
+)
